Fixing fiber response
