# internal/controllers/about.go
@@ -2,6 +2,7 @@ package controllers
 
 import (
 	"context"
+	"portfolio-api/internal/models"
 	"time"
 
 	"github.com/gofiber/fiber/v2"
@@ -20,11 +21,14 @@ func NewAboutControllers(conn *pgxpool.Pool, timeout time.Duration) *AboutContro
 	}
 }
 
-func (dc *AboutControllers) About(c *fiber.Ctx) (responses string, err error) {
+func (dc *AboutControllers) About(c *fiber.Ctx) (responses models.About, err error) {
 
+	var model = new(models.About)
 	query_list := "SELECT messages FROM about WHERE id = 1;"
 	row := dc.dbConn.QueryRow(context.Background(), query_list)
-	err = row.Scan(&responses)
+	err = row.Scan(&model.Messages)
+
+	responses = *model
 
 	if err != nil {
 		return
